# FRE_2024

ROS2-PurePursuitControl-PathPlanning-Tracking/: nav2_params.yaml
fre_2024/: package.xml  setup.cfg  setup.py
fre_2024/fre_2024/: Ransac_gazebo.py  Ransac_plant.py  Ransac_plant_test.py  Ransac_wt.py  Ransacline.py  goal_publisher.py  odometry_transform.py  point0.py  point0_test.py  rest_api.py  sequence2.py  task3_4.world
fre_2024/nav2_param/: nav2_params.yaml
linorobot2-humble/linorobot2_description/urdf/: 4wd_properties.urdf.xacro
linorobot2-humble/linorobot2_description/urdf/sensors/: laser.urdf.xacro
linorobot2-humble/linorobot2_gazebo/launch/: gazebo.launch.py
linorobot2-humble/linorobot2_gazebo/worlds/: maze.world  mazeW.world  square.world  wall.world  work.world
linorobot2-humble/linorobot2_navigation/launch/: navigation.launch.py
