<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fre_2024</name>
  <version>0.0.0</version>
  <description>pub and sub</description>
  <maintainer email="thommandra65@gmail.com">tune65</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <depend>python3-rospkg</depend>
  <depend>python3-jinja2</depend>
  <depend>python3-opencv</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-shapely</depend>
  <depend>python3-packaging</depend>
  <depend>python3-yaml</depend>

  <depend>ros2launch</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>nav_msgs</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
